// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
     url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
}

enum Role {
  ADMIN
  EMPLOYEE
}

enum BookingStatus {
  BOOKED
  CANCELLED
}

model User {
  id         String    @id @default(cuid())
  name       String
  email      String    @unique
  password   String
  role       Role      @default(EMPLOYEE)
  created_at DateTime  @default(now())

  bookings   Booking[]

  @@map("users")
}

model Room {
  id         String    @id @default(cuid())
  name       String
  capacity   Int
  location   String
  created_at DateTime  @default(now())

  bookings   Booking[]

  @@map("rooms")
}

model Booking {
  id          String        @id @default(cuid())
  title       String
  description String?
  start_time  DateTime
  end_time    DateTime
  status      BookingStatus @default(BOOKED)
  created_at  DateTime      @default(now())

  user_id     String
  room_id     String

  user        User          @relation(fields: [user_id], references: [id], onDelete: Cascade)
  room        Room          @relation(fields: [room_id], references: [id], onDelete: Cascade)

  @@map("bookings")
}
